<resources>
    <string name="app_name">Inventory Management</string>
    <string name="insert_dummy_data">insert dummy data</string>
    <string name="delete_all_data">delete all data</string>
    <string name="production">Product</string>
    <string name="dealer">The Dealer</string>
    <string name="description">Description</string>
    <string name="photo">Photo</string>
    <string name="info_for_production">This is information for the production</string>
    <string name="add_production">Add production</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="add">add</string>
    <string name="price">The Price</string>
    <string name="weight">The Weight</string>
    <string name="name_production">name</string>
    <string name="description_production">description production</string>
    <string name="get_started_by_adding_a_production">Get started by adding a production</string>
    <string name="it_s_a_bit_lonely_here">Welcome, Add your products to showing here....</string>
    <string name="delete_this_production">delete this production?</string>
    <string name="cancel">Cancel</string>
    <string name="message">Discard your changes and quit Editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="price_">price $</string>
    <string name="weight_kgs">weight</string>
    <string name="dealer_d">dealer</string>
    <string name="description_p">description</string>
    <string name="add_password">Add password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="enter_password">enter password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inventory Products</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">about</string>
    <string name="read">Screen "Goods" contains list(catalog) of all your goods including
        information about goods in stock.
        You can add items to catalog entering data manually.
        For search and edit goods you can use top toolbar search buttons to filter list goods.
        You can start working without filling in Goods catalog
        you can add
        products and edit it quickly \n You can add reports for customers and products and export it
        as excel file \n Inventory your products and add your customer
        enter information about new products there manually and these positions will be added to
        catalog automatically.</string>
    <string name="about_app">Application simple inventory management products, customers, reports </string>
    <string name="delete_all_customers">delete all customers</string>
    <string name="insert_dummy_customers">insert dummy customers</string>
    <string name="name_product">Name Product</string>
    <string name="name_customer">Name Customer</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Rebate</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="notes">Notes</string>
    <string name="delete_customer">delete this customer?</string>

</resources>
