<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".EditSuppliers">

        <EditText
            android:id="@+id/name_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_customer"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/product_sup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_product"
            android:layout_marginBottom="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/num_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:inputType="number"
                android:hint="@string/quantity" />

            <EditText
                android:id="@+id/rebate_sup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:hint="rebate" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/debit_sup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:inputType="number"
                android:hint="debit" />

            <EditText
                android:id="@+id/credit_sup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:hint="credit" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/amount_sup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:inputType="number"
                android:hint="Total$" />

        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/date_sup"
                android:focusable="false"
                android:hint="@string/date"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:id="@+id/notes_sup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>
